fix: fix layout problems in the Skills and Proficiency aside

--- a/CV/src/widgets/aside/_aside.scss
+++ b/CV/src/widgets/aside/_aside.scss
@@ -120,7 +120,7 @@ aside {
   // Position
 
   // block-model
-  row-gap: 20px;
+  row-gap: 15px;
   // Typography
 
   // Decoration
@@ -134,7 +134,7 @@ aside {
   // Position
 
   // block-model
-
+  width: 100%;
   // Typography
 
   // Decoration
